# plife

./: Cargo.toml  README.md  config.md
examples/: cool.yml
src/: compute.wgsl  main.rs  render.wgsl  serialize.rs  simulation.rs  util.rs  visualization.rs
