[package]
name = "plife"
version = "0.1.0"
authors = ["Taylor <quantumtraveling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
glam = "0.12"
