[package]
name = "plife"
version = "0.1.0"
authors = ["Taylor <quantumtraveling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
wgpu = "0.7"
futures = "0.3"
winit = "0.24"
serde = "1.0"
bincode = "1.3"
ctrlc = "3.1"
